# jj-yield

./: CLAUDE.md  Cargo.toml  README.md
src/: app.rs  conflict.rs  diff.rs  highlight.rs  jj.rs  lib.rs  main.rs  parser.rs  ui.rs
tests/: parser_tests.rs
tests/fixtures/: deletion.txt  multi_region.txt  three_sided.txt  two_sided.txt
