[package]
name = "jj-yield"
version = "0.1.0"
edition = "2021"
description = "A TUI for comparing and resolving multi-sided Jujutsu conflicts (snapshot marker style)."
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["jujutsu", "jj", "conflict", "merge", "tui"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# `crossterm` is re-exported as `ratatui::crossterm`, so a single dependency keeps
# the backend version in lockstep with ratatui.
ratatui = "0.29"
anyhow = "1"
similar = { version = "3.1.1", features = ["inline", "unicode"] }
tree-sitter = "0.26.9"
tree-sitter-highlight = "0.26.9"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-python = "0.25.0"
tree-sitter-json = "0.24.8"

[profile.release]
strip = true
lto = true
